# longevity

./: .gitignore  CHANGELOG.md  LICENSE  README.md  common.go  coverage.sh  doc.go  example_get_test.go  go.mod  go.sum  longevity.py  main.go  notes.md  pyproject.toml  requester.go  requester_test.go  requirements.txt  response_parser.go  response_parser_test.go  setup.py
.claude/: settings.json
_cmd/: main.go
cmd/: longevity.go  main.go
design/: design.md  long.html  notes.md
docs/: architecture.md
longevity/: __init__.py  longevity.py  main.py  requester.py  response_parser.py
longevity/parser/: __init__.py  init_state.py  response_parser.py  state.py
src/longevity/: __init__.py  cli.py  csv_cli.py
src/longevity/adapters/: __init__.py  bs4_parser.py  date_parser.py  http_requests.py  system_clock.py
src/longevity/application/: __init__.py  ports.py  use_cases.py
src/longevity/domain/: __init__.py  models.py  services.py
src/longevity/ports/: __init__.py  clock.py  fetcher.py  parser.py
testdata/: keith_richards.html
tests/: __init__.py  conftest.py  test_bs4.py  test_cli.py  test_date_parser.py  test_domain_services.py  test_format_post_data.py  test_get_date_fields.py  test_http_fetcher.py  test_init_state.py  test_json_output.py  test_live_request_smoke.py  test_longevity.py  test_main.py  test_requester.py  test_requester_json_output.py  test_response_parser.py  test_split_date.py  test_system_clock.py  test_use_cases.py
tests/testdata/: barack_obama.html  download_barack_obama.sh  download_keith_richards.sh  out.csv  sample.csv
