[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "longevity"
version = "0.1.0"
description = "Calculates life expectancy according to the Social Security Administration website."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Phil Hanna"}]
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
longevity = "longevity.cli:main"
longevity-batch = "longevity.csv_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
