[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "longevity"
version = "0.2.0"
description = "Calculates life expectancy according to the Social Security Administration website."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Phil Hanna"}]
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
longevity = "longevity.cli:main"
longevity-batch = "longevity.csv_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
